# ChangeLog for media-video/mplayer2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mplayer2-2.0_p20121108 (11 Nov 2012)

  11 Nov 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20121108.ebuild,
  mplayer2-9999.ebuild:
  new snapshot, sync with portage

*mplayer2-2.0_p20121103 (07 Nov 2012)

  07 Nov 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20121103.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  new snapshot, add USE lcms, vcd and yuv4mpeg

  28 Sep 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120828.ebuild,
  mplayer2-9999.ebuild:
  require python 2.7, not just 2.6 (bug #434356)

  05 Sep 2012; Nikoli <nikoli@lavabit.com> files/mplayer2-py2compat.patch,
  mplayer2-2.0_p20120828.ebuild, mplayer2-9999.ebuild:
  fix py3 support

  02 Sep 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120828.ebuild,
  mplayer2-9999.ebuild:
  aqua supports opengl

*mplayer2-2.0_p20120828 (01 Sep 2012)

  01 Sep 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20120828.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  new snapshot, add USE quvi

*mplayer2-2.0_p20120815 (19 Aug 2012)

  19 Aug 2012; Nikoli <nikoli@lavabit.com> +files/mplayer2-py2compat.patch,
  +mplayer2-2.0_p20120815.ebuild, mplayer2-9999.ebuild:
  new snapshot, update live ebuild

  17 Jun 2012; Ben de Groot <yngwin@gentoo.org> -mplayer2-2.0_p20111126.ebuild,
  -mplayer2-2.0_p20120309.ebuild, mplayer2-2.0_p20120517.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  Remove old. Move USE=ass to global libass usage.

  13 Jun 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120517.ebuild,
  mplayer2-9999.ebuild:
  sync with mplayer1

  23 May 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120517.ebuild,
  mplayer2-9999.ebuild:
  USE dirac was removed from libav

*mplayer2-2.0_p20120517 (23 May 2012)

  23 May 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20120517.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  new snapshot, add USE portaudio and postproc
