@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Nov 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20121108.ebuild,
+  mplayer2-9999.ebuild:
+  set quvi dep, remove ggi
+
 *mplayer2-2.0_p20121108 (11 Nov 2012)
 
   11 Nov 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20121108.ebuild,
